[tool.poetry]
name = "scalewiz"
version = "0.5.3"
description = "A graphical user interface for chemical performance testing designed to work with Teledyne SSI MX-class HPLC pumps."
authors = ["Alex Whittington <alex@southsun.tech>"]
packages = [
    {include = "scalewiz"}
]
include = [
    { path = "scalewiz/components/*.ico" }
]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.3.4"
tkcalendar = "^1.6.1"
pandas = "^1.2.2"
py-hplc = "^0.1.6"
tomlkit = "^0.7.0"
appdirs = "^1.4.4"

[tool.poetry.scripts]
scalewiz = "scalewiz.__main__:main"

[tool.poetry.dev-dependencies]
rope = "^0.18.0"
mypy = "^0.812"
readme-renderer = "^29.0"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
